--- a/index.html
+++ b/index.html
@@ -251,6 +251,25 @@ th {
 <div class="references">
   References
   <hr>
-  Avaliable on request
+  <table>
+    <tr>
+      <th>Name</th>
+      <th>Address</th>
+      <th>Telephone</th>
+      <th>Email</th>
+    </tr>
+    <tr>
+      <th>Claire Wilson</th>
+      <th>Runshaw College, Langdale Road, Leyland, Lancashire, PR25 3DQ</th>
+      <th><a href="tel:01772622677">01772 622677</a></th>
+      <th><a href="mailto:wilson.c2@runshaw.ac.uk">wilson.c2@runshaw.ac.uk</a></th>
+    </tr>
+    <tr>
+      <th>Samantha Gray</th>
+      <th>Runshaw College, Langdale Road, Leyland, Lancashire, PR25 3DQ</th>
+      <th><a href="tel:01772622677">01772 622677</a></th>
+      <th><a href="mailto:gray.s2@runshaw.ac.uk">gray.s2@runshaw.ac.uk</a></th>
+    </tr>
+  </table>
 </div>
 </html>
