--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <title>Finlay Iddon</title>
+  <title>Finlay Joshua Iddon</title>
 <body>
 <style>
 .about {
@@ -115,8 +115,6 @@ th {
 <div class="about">
   Contact Me
   <hr>
-  Finlay Joshua Iddon
-  <br>
   30 Well Orchard, Bamber Bridge,
   <br>
   Preston, Lancashire,
@@ -138,14 +136,23 @@ th {
   Key Skills
   <hr>
   Teamwork
+  <br>
   Problem Solving
+  <br>
   Numeracy & IT
+  <br>
   Ability to learn & adapt
+  <br>
   Organisational
+  <br>
   Using iniative and self-motivated
+  <br>
   Working under pressure & to deadlines
+  <br>
   Communication & interpersonal
+  <br>
   Negotiation
+  <br>
   Valuing diversity and difference
 </div>
 <div class="education">
@@ -257,18 +264,21 @@ th {
       <th>Address</th>
       <th>Telephone</th>
       <th>Email</th>
+      <th>Course</th>
     </tr>
     <tr>
       <th>Claire Wilson</th>
       <th>Runshaw College, Langdale Road, Leyland, Lancashire, PR25 3DQ</th>
       <th><a href="tel:01772622677">01772 622677</a></th>
       <th><a href="mailto:wilson.c2@runshaw.ac.uk">wilson.c2@runshaw.ac.uk</a></th>
+      <th>Business Level 2 (2021 to 2022)</th>
     </tr>
     <tr>
       <th>Samantha Gray</th>
       <th>Runshaw College, Langdale Road, Leyland, Lancashire, PR25 3DQ</th>
       <th><a href="tel:01772622677">01772 622677</a></th>
       <th><a href="mailto:gray.s2@runshaw.ac.uk">gray.s2@runshaw.ac.uk</a></th>
+      <th>IT with Business Level 1 (2020 to 2021)</th>
     </tr>
   </table>
 </div>
