--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@ th {
       <th>Business Level 2 (2021 to 2022)</th>
     </tr>
     <tr>
-      <th>Samantha Gray</th>
+      <th>?</th>
       <th>Runshaw College, Langdale Road, Leyland, Lancashire, PR25 3DQ</th>
       <th><a href="tel:01772622677">01772 622677</a></th>
-      <th><a href="mailto:gray.s2@runshaw.ac.uk">gray.s2@runshaw.ac.uk</a></th>
+      <th><a href="mailto:?">?</a></th>
       <th>IT with Business Level 1 (2020 to 2021)</th>
     </tr>
   </table>
