--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   border: 8px solid red;
   text-align: center;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
 }
 .profile {
@@ -22,7 +22,7 @@
   border: 8px solid red;
   text-align: left;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
 }
 .key {
@@ -33,7 +33,7 @@
   border: 8px solid red;
   text-align: left;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
 }
 .education {
@@ -44,7 +44,7 @@
   border: 8px solid red;
   text-align: left;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
 }
 .employment {
@@ -55,7 +55,7 @@
   border: 8px solid red;
   text-align: left;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
 }
 .work {
@@ -66,7 +66,7 @@
   border: 8px solid red;
   text-align: left;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
 }
 .interests {
@@ -77,7 +77,7 @@
   border: 8px solid red;
   text-align: left;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
 }
 .references {
@@ -88,7 +88,7 @@
   border: 8px solid red;
   text-align: left;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
 }
 a:link {
@@ -105,9 +105,9 @@ th {
   padding: 25px;
   margin: 25px;
   border: 8px solid red;
-  text-align: left;
+  text-align: center;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
 }
 </style>
@@ -125,7 +125,7 @@ th {
   <br>
   <a href="mailto:finster154@hotmail.com">Email</a>
   <br>
-  <a href="tel:07963370653">Phone</a>
+  <a href="tel:07963370653">Phone</a> (at the moment I won't be able to recieve a messages or calls on this number)
 </div>
 <div class="profile">
   Personal Summary
