--- a/index.html
+++ b/index.html
@@ -262,16 +262,13 @@ th {
     <tr>
       <th>Name</th>
       <th>Address</th>
-      <th>Telephone</th>
-      <th>Email</th>
-      <th>Course</th>
     </tr>
     <tr>
       <th>Claire Wilson</th>
       <th>Runshaw College, Langdale Road, Leyland, Lancashire, PR25 3DQ</th>
-      <th><a href="tel:01772622677">01772 622677</a></th>
-      <th><a href="mailto:wilson.c2@runshaw.ac.uk">wilson.c2@runshaw.ac.uk</a></th>
-      <th>Business Level 2 (2021 to 2022)</th>
+      <th><a href="mailto:wilson.c2@runshaw.ac.uk">Email</a></th>
+      <th><a href="tel:01772622677">Phone</a></th>
+      <th>PT (Personal Tutor): 2021 to 2022</th>
     </tr>
     <tr>
       <th></th>
