--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ th {
   <br>
   <a href="mailto:finster154@hotmail.com">Email</a>
   <br>
-  <a href="tel:07963370653">Phone</a> (at the moment I won't be able to recieve a messages or calls on this number)
+  <a href="tel:07963370653">Phone</a>
 </div>
 <div class="profile">
   Personal Summary
@@ -268,14 +268,12 @@ th {
       <th>Runshaw College, Langdale Road, Leyland, Lancashire, PR25 3DQ</th>
       <th><a href="mailto:wilson.c2@runshaw.ac.uk">Email</a></th>
       <th><a href="tel:01772622677">Phone</a></th>
-      <th>PT (Personal Tutor): 2021 to 2022</th>
     </tr>
     <tr>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>Joanne Walshe</th>
+      <th>Runshaw College, Langdale Road, Leyland, Lancashire, PR25 3DQ</th>
+      <th><a href="mailto:walshe.j@runshaw.ac.uk">Email</a></th>
+      <th><a href="tel:01772622677">Phone</a></th>
     </tr>
   </table>
 </div>
